# coachmic

./: .gitignore  LICENSE  README.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/middleware/: auth_middleware.py
backend/app/models/: __init__.py  company_intel.py  feedback.py  interview.py  job.py  resume.py  session.py  text_interview.py  user.py
backend/app/routers/: auth.py  coach.py  company_intel.py  feedback.py  interview.py  jobboard.py  resume.py  session.py  stt.py  text_interview.py
backend/app/services/: account_deletion_service.py  coach_service.py  company_intel_service.py  cover_letter_service.py  elevenlabs_service.py  encryption_service.py  feedback_generator.py  firebase_service.py  gemini_service.py  job_matcher.py  jobboard_service.py  jsearch_service.py  resume_parser.py  search_query_optimizer.py  storage_service.py  stt_service.py  text_interview_service.py  user_credentials_service.py
backend/tests/: __init__.py  conftest.py  test_account_deletion.py  test_feedback_generator.py  test_resume_parser.py  test_session_api.py
frontend/: .env.example  .eslintrc.cjs  .firebaserc  firebase.json  firestore.indexes.json  index.html  package-lock.json  package.json  storage.rules  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/.firebase/: hosting.ZGlzdA.cache
frontend/public/: audio-worklet.js
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/context/: AppContext.tsx  (+1 more)
(+71 files in other folders)
