[project]
name = "voiceprep-ai-backend"
version = "1.0.0"
description = "VoicePrep AI - AI Interview Coach Backend"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic>=2.9.0,<3.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "httpx>=0.27.0,<1.0.0",
    "aiohttp>=3.10.0,<4.0.0",
    "google-cloud-aiplatform>=1.60.0,<2.0.0",
    "google-cloud-storage>=2.18.0,<3.0.0",
    "google-auth>=2.30.0,<3.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "pypdf>=4.0.0,<7.0.0",
    "python-docx>=1.1.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
